# soundscapes-mm

./: CMakeLists.txt  Makefile  README.md  plugin-mm.json  plugin.json
.github/workflows/: build-metamodule-plugin.yml  build-metamodule.yml  build-vcv.yml  build.yml
src/: KnobStyles.hpp  Skyline.cpp  Soundscape.cpp  plugin.cpp  plugin.hpp  soundscape.cpp  soundscapes.cpp  soundscapes.hpp  soundscapes_fx.cpp  soundscapes_sequencer.cpp  soundscapes_synth.cpp  soundscapes_ui.cpp
src/widgets/: KnobBase.hpp  PanelTheme.hpp
